# data-science-vonix-statistic-studies

./: Pipfile  README.md  a.sql  pyproject.toml  run.py  test_anova.py
diagram/: vonix-statistic.drawio
jupyter-studies/: agent.ipynb  holster-winte-200s.ipynb  interval_frequency.ipynb  ml_multivariate.ipynb  ml_univariate.ipynb  multivariate.ipynb  queue.ipynb
jupyter-studies/nn_models/: ml_univariate.ipynb  ml_univariate_queue_fluency_allTimes_allQueues-Copy1.ipynb  ml_univariate_queue_fluency_allTimes_allQueues_OHE_agents_queues.ipynb  pesos.h5
jupyter-studies/nn_models/nn_200secs/: data_to_predict_mean_cv.ipynb  ml_univariate_agent_fluency_200secs.ipynb  test_data.csv  test_data_onequeue.txt
jupyter-studies/nn_models/nn_OHE/: data_to_predict_mean_cv.ipynb  pesos.h5  (+1 more)
jupyter-studies/temporal series/: ARIMA.ipynb  agent.ipynb  holter_winters-modified.ipynb  interval_frequency.ipynb  queue.ipynb
src/vonixstatisc/: __init__.py
vonix-py-statistic/: pyproject.toml
vonix-py-statistic/vonix-py-statistic/: __init__.py
vonix-py-statistic/vonix-py-statistic/entities/: __init__.py  agent.py  agent_event.py  agent_pause.py  agent_summary.py  call.py  call_rating.py  chat.py  chat_message.py  profiler.py  queue.py  queue_summary.py  tree.py
vonix-py-statistic/vonix-py-statistic/functions/: __init__.py  functions.py
vonix-py-statistic/vonix-py-statistic/main/: main.py
vonix-py-statistic/vonix-py-statistic/repository/: __init__.py  call_repository.py
vonix-py-statistic/vonix-py-statistic/utils/: __init__.py  errorHandler.py  exception_classes.py
(+26 files in other folders)
