[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vonixsync"
version = "1.0.12"
description = "Database syncronizer"
authors = [{name = "Victor Leone", email = "victor@vonix.com"}]
maintainers = [
  {name = "Luiz", email = "luiz@vonix.com.br"},
  {name = "Vonix", email = "contato@vonix.com.br"},
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["syncronizer", "vonix"]
license =  {file = "LICENSE"}

classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X"  
]

dependencies = [
"python>=3.9",
"SQLAlchemy>=2.0.9",
"psycopg2-binary>=2.9.6",
"mysql-connector-python>=8.0.32",
"matplotlib>=3.7.1",
"pandas>=2.0.0",
"sklearn>=0.0.post4",
"numpy>=1.24.2",
"seaborn>=0.12.2",
]

[project.urls]
repository = "https://github.com/vonix/vonix-py-sync"