[tool.poetry]
name = "vonix-py-statistic"
version = "0.0.1"
description = ""
authors = ["vileoleone <vileoleone@gmail.com>"]
readme = "README.md"
packages = [{include = "vonix_py_statistic"}]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^2.0.9"
psycopg2-binary = "^2.9.6"
mysql-connector-python = "^8.0.32"
matplotlib = "^3.7.1"
pandas = "^2.0.0"
sklearn = "^0.0.post4"
numpy = "^1.24.2"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
